fixed the overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@ html, body {
     width: 100%;
     box-sizing: border-box;
     background-color: #7490a7;
+    overflow-y: scroll;
 }
 
 
